--- a/css/index.css
+++ b/css/index.css
@@ -95,19 +95,6 @@
     width: 100%;
 }
 
-.hamburger {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-    gap: 5px;
-}
-
-.hamburger .bar {
-    width: 25px;
-    height: 3px;
-    background-color: var(--primary-color);
-}
-
 
 /*Hero*/
 .hero {
@@ -232,27 +219,20 @@
 
 @media (max-width: 768px) {
     .navbar {
-        position: absolute;
         top: 80px;
-        right: 0;
-        flex-direction: column;
         background-color: var(--background-color);
         width: 100%;
-        display: none;
     }
 
-    .navbar.active {
-        display: flex;
+    .nav-play-btn {
+        height: 40px;
+        width: 120px;
+        font-size: 14px;
     }
 
-    .nav-list {
-        flex-direction: column;
-        gap: 20px;
-        margin-bottom: 20px;
-    }
-
-    .hamburger {
-        display: flex;
+    .nav-list a {
+        visibility: hidden;
+        font-size: 0%;
     }
 
     .home-header .container {
@@ -267,11 +247,11 @@
 
 @media (max-width: 768px) {
     .hero {
-        background-position: -80px;
+        background-position: -120px -80px;
     }
 
     .hero h1 {
-        font-size: 30px;
+        font-size: 35px;
         line-height: 1.1;
     }
 
@@ -286,8 +266,8 @@
     }
 
     .hero .container {
-        padding: 35px;
-        margin-top: 180px;
+        padding: 30px;
+        margin-top: 20px;
     }
 
     .btn {
